docs: sync README and release notes for session mode updates